# vox-stt

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: overlay.html
scripts/: gen_icon.py
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  injector.rs  keyboard_hook.rs  lib.rs  main.rs  stt_bridge.rs
src/components/: Settings.tsx
src/styles/: globals.css
stt-server/: audio.py  config.py  formatter.py  pyproject.toml  server.py  transcriber.py
