[package]
name = "vox"
version = "0.1.0"
edition = "2021"

[lib]
name = "vox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3"
enigo = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
