[package]
name = "vox"
version = "0.1.0"
edition = "2021"
description = "Local speech-to-text desktop app that types for you"
authors = ["Daniel Tarraga"]
license = "MIT"

[lib]
name = "vox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3"
enigo = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
winreg = "0.55"
